2004-07-30  Rich Kilmer  <rich@infoether.com>

       * lib/rubygems/installer.rb The application stub now defaults 
         to the latest version of the library, and optionally allows 
         an initial parameter conforming to _VERSION_ to be passed
         to select a prior version of the library (this initial 
         parameter, if present, is shifted off of ARGV).
       * lib/rubygems/version.rb correct? is now a class method on
         Version enabling Gem::Version.correct?(...)

2004-07-26  Jim Weirich  <jim@tardis>

	* lib/rubygems.rb (Gem::Exception::latest_load_paths): Added
	latest_load_paths and refactored all_load_paths to use common
	code.

2004-07-25  Rich Kilmer  <rich@infoether.com>
        * fixed bug in using --source in command.rb (removed short -s version)

        * changed spec to use the RUBY_PLATFORM for Platform::CURRENT

        * added ability to choose from list of available gems on remote install
          if (1) some of the gems are binary and (2) there are move than one.
          If the gems are all source gems, the latest is selected.

2004-07-25  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems.rb (Gem::Exception::all_load_paths): Added
	all_load_paths utility function.

	* bin/update_rubygems: Added a command to update the gem
	installation based on a update gem.

	* Rakefile: Pulled package file list out into a constant so it can
	be reused between the package command and the gem package command.
	Added a gem package target to support rubygems updates.

2004-07-22  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/version.rb:
	  * (Requirement#initialize) initialize @version to avoid warning
	  * (Dependency#initialize) initialize @version_requirement to avoid
	    warning

2004-07-19  Chad Fowler     <chad@chadfowler.com>
        * install.rb: Shebang line should point to the ruby version used during
	installation.

2004-07-19  Assaph Mehr     <assaph@avaya.com>